# difflink

./: .gitignore  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  difflink.c  difflink.h
src/.deps/: difflink.Po
